# mini-projet-6-stratoprediction

./: .gitignore  README.md  README_Init.md  console_test.py  gph_saved.py  pyproject.toml  test_isha.py  test_yanis.py  tests_affichage_val.py  tests_geo.py
Miscellaneous/: Info.txt
assets/: gfs.t00z.pgrb2.1p00 (1).f000  gfs.t06z.pgrb2.0p25.f000
strato_prediction/: __init__.py  __main__.py
strato_prediction/CLI/: __init__.py  args.py  console.py  conversions.py
strato_prediction/GRIB/: __init__.py  data_retrieval.py
strato_prediction/analyse/: __init__.py
strato_prediction/display/: __init__.py  display.py
strato_prediction/simulation/: __init__.py  conversions.py  simulation.py  utils.py
